# meshcore-connectivity-console

./: .env.example  .gitignore  AI_ISSUES.md  COMPANION_MODE_ANALYSIS.md  Dockerfile  MESHCORE_TCP_BOT_SPECIFICATION.md  README.md  _measure_reply_sizes.py  _probe_tcp_send.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.example.toml  config.toml
docs/: README.md  github-metadata.md
docs/screenshots/: README.md
meshcore_bot/: __init__.py  __main__.py  bot_service.py  bridge_gateway.py  channels.py  config.py  database.py  endpoint_console.py  gateway_client.py  identity.py  ingest_service.py  mesh_builders.py  mesh_crypto.py  mesh_packets.py  neighbours_worker.py  probe_service.py  repeater_protocol.py  rs232.py  tcp_client.py  transport.py  web_service.py
meshcore_tcp_bot/: __init__.py  __main__.py  app.py  config.py  console.py  database.py  identity.py  management.py  models.py  packets.py  protocol.py  service.py  web.py
tests/: test_mesh_packets.py  test_repeater_protocol.py  test_rs232.py
